--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,26 @@
 {
   "name": "ember-calendar",
   "dependencies": {
-    "jquery": "^1.11.1",
-    "ember": "1.10.0",
-    "ember-data": "1.0.0-beta.15",
-    "ember-resolver": "~0.1.11",
-    "loader.js": "ember-cli/loader.js#1.0.1",
+    "ember": "1.11.1",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
-    "ember-qunit": "0.2.8",
+    "ember-data": "1.0.0-beta.16.1",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
+    "ember-qunit": "0.3.1",
     "ember-qunit-notifications": "0.0.7",
-    "qunit": "~1.17.1"
+    "ember-resolver": "~0.1.15",
+    "jquery": "^1.11.1",
+    "loader.js": "ember-cli/loader.js#3.2.0",
+    "qunit": "~1.17.1",
+    "paint": "~0.7.16",
+    "lodash": "~3.8.0",
+    "moment": "~2.10.2",
+    "moment-timezone": "~0.3.1",
+    "interact": "~1.2.4",
+    "spinjs": "~2.0.2",
+    "ember-cli-moment-shim": "~0.1.0"
+  },
+  "resolutions": {
+    "jquery": "^1.11.1"
   }
 }
