--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "broccoli-sass": "^0.6.5",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
+    "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
     "ember-cli-htmlbars": "0.7.4",
