--- a/package.json
+++ b/package.json
@@ -11,40 +11,35 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alphasights/ember-calendar"
-  },
+  "repository": "",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "Eugenio Depalo <eugenio@alphasights.com>",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "broccoli-sass": "^0.6.5",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
-    "ember-cli-autoprefixer": "^0.3.0",
-    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
     "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-paint": "^1.8.20",
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
-    "ember-moment": "^1.1.1",
-    "ember-rl-dropdown": "^0.2.0",
     "ember-try": "0.0.4"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0"
+    "broccoli-sass": "^0.6.6",
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-paint": "^1.8.20",
+    "ember-moment": "^1.1.1",
+    "ember-rl-dropdown": "^0.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
