--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,24 @@
 {
   "name": "ember-calendar",
   "dependencies": {
-    "ember": "1.12.0",
+    "ember": "~1.13.2",
+    "ember-cli-moment-shim": "~0.1.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.0.0-beta.17",
+    "ember-data": "~1.13.1",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
     "ember-qunit": "0.3.2",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.15",
+    "interact": "~1.2.4",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "paint": "~0.7.16",
     "lodash": "~3.8.0",
     "moment": "~2.10.2",
     "moment-timezone": "~0.3.1",
-    "interact": "~1.2.4",
-    "spinjs": "~2.0.2",
-    "ember-cli-moment-shim": "~0.1.0"
+    "paint": "~0.7.16",
+    "qunit": "~1.17.1",
+    "spinjs": "~2.0.2"
   },
   "resolutions": {
     "jquery": "^1.11.1"
