--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-rl-dropdown": "^0.2.3",
     "ember-try": "0.0.4"
   },
   "keywords": [
