--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "ember-browserify": "^1.0.1",
     "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-autoprefixer": "^0.3.0",
@@ -32,7 +33,8 @@
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-rl-dropdown": "^0.2.3",
-    "ember-try": "0.0.4"
+    "ember-try": "0.0.4",
+    "interact.js": "^1.2.4"
   },
   "keywords": [
     "ember-addon"
