--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli-autoprefixer": "^0.3.0",
     "ember-cli-dependency-checker": "1.0.0",
     "ember-cli-htmlbars": "0.7.6",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.3",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.12",
@@ -32,19 +33,18 @@
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-rl-dropdown": "^0.2.3",
     "ember-try": "0.0.4",
-    "interact.js": "^1.2.4"
+    "interact.js": "^1.2.4",
+    "ember-cli-paint": "^1.8.20",
+    "ember-moment": "^1.1.1",
+    "ember-rl-dropdown": "^0.2.3"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
     "broccoli-sass": "^0.6.6",
-    "ember-cli-babel": "^5.0.0",
-    "ember-cli-paint": "^1.8.20",
-    "ember-moment": "^1.1.1",
-    "ember-rl-dropdown": "^0.2.0"
+    "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
