--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-calendar",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "An awesome Ember calendar",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/alphasights/ember-calendar",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -21,7 +21,7 @@
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
-    "ember-cli-autoprefixer": "^0.3.0",
+    "ember-cli-autoprefixer": "^0.4.1",
     "ember-cli-dependency-checker": "1.0.0",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-htmlbars-inline-precompile": "^0.1.3",
@@ -33,7 +33,7 @@
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-try": "0.0.4",
-    "ember-cli-paint": "^1.8.20",
+    "ember-cli-paint": "^1.10.4",
     "ember-moment": "^1.1.1",
     "ember-rl-dropdown": "^0.2.3"
   },
