--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.3",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-paint": "^1.10.4",
     "ember-cli-qunit": "0.3.12",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-try": "0.0.4",
-    "ember-cli-paint": "^1.10.4",
     "ember-moment": "^1.1.1",
-    "ember-rl-dropdown": "^0.2.3"
+    "ember-rl-dropdown": "^0.2.3",
+    "ember-try": "0.0.4",
+    "liquid-fire": "^0.20.4"
   },
   "keywords": [
     "ember-addon"
