Make occurrence interactions optional

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ember-cli-paint": "^1.10.4",
     "ember-cli-qunit": "0.3.12",
     "ember-cli-uglify": "1.0.1",
+    "ember-component-inbound-actions": "0.0.3",
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
