--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,13 @@
     "ember-resolver": "~0.1.15",
     "interact": "~1.2.4",
     "jquery": "^1.11.1",
+    "jquery-simulate": "~1.0.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "lodash": "~3.8.0",
     "moment": "~2.10.2",
     "moment-timezone": "~0.3.1",
     "paint": "~0.7.16",
-    "qunit": "~1.17.1",
-    "spinjs": "~2.0.2",
-    "jquery-simulate": "~1.0.1"
+    "qunit": "~1.17.1"
   },
   "resolutions": {
     "jquery": "^1.11.1"
