--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "moment": "~2.10.2",
     "moment-timezone": "~0.3.1",
     "paint": "~0.7.16",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "spinjs": "~2.0.2"
   },
   "resolutions": {
     "jquery": "^1.11.1"
