Add demo url to package.json

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://alphasights.github.io/ember-calendar/demo"
   }
 }
