--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-htmlbars": "^0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-paint": "^1.10.6",
     "ember-cli-qunit": "^0.3.15",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^1.13.5",
