Add resolutions back

--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "paint": "~0.8.4",
     "qunit": "~1.18.0",
     "spinjs": "~2.0.2"
+  },
+  "resolutions": {
+    "jquery": "^1.11.1"
   }
 }
