--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.0",
+    "broccoli-sass": "^0.6.6",
     "ember-cli": "^1.13.1",
     "ember-cli-app-version": "^0.3.5",
     "ember-cli-autoprefixer": "^0.4.1",
