--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,25 @@
 {
   "name": "ember-calendar",
   "dependencies": {
-    "ember": "^1.13.3",
-    "ember-cli-moment-shim": "^0.2.0",
+    "ember": "1.13.3",
+    "ember-cli-moment-shim": "0.2.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "^1.13.5",
+    "ember-data": "1.13.5",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "^0.4.1",
-    "ember-qunit-notifications": "^0.0.7",
-    "ember-resolver": "^0.1.18",
-    "interact": "^1.2.4",
-    "jquery": "^1.11.1",
-    "jquery-simulate": "^1.0.1",
+    "ember-qunit": "0.4.1",
+    "ember-qunit-notifications": "0.0.7",
+    "ember-resolver": "0.1.18",
+    "interact": "1.2.4",
+    "jquery": "1.11.1",
+    "jquery-simulate": "1.0.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "lodash": "^3.10.0",
-    "moment": "^2.10.2",
-    "moment-timezone": "^0.4.0",
-    "paint": "^0.8.4",
-    "qunit": "^1.18.0",
-    "spinjs": "^2.0.2"
+    "lodash": "3.10.0",
+    "moment": "2.10.2",
+    "moment-timezone": "0.4.0",
+    "paint": "0.8.4",
+    "qunit": "1.18.0",
+    "spinjs": "2.0.2"
   },
   "resolutions": {
     "jquery": "^1.11.1"
