Remove color keyword/variable check for the sass linter

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -8,7 +8,10 @@ linters:
     enabled: true
 
   ColorKeyword:
-    enabled: true
+    enabled: false
+
+  ColorVariable:
+    enabled: false
 
   Comment:
     enabled: true
