--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,12 @@
     "lodash": "3.10.0",
     "moment": "2.10.2",
     "moment-timezone": "0.4.0",
-    "paint": "0.9.0",
+    "paint": "0.9.1",
     "qunit": "1.18.0",
-    "spinjs": "2.0.2"
+    "spinjs": "2.0.2",
+    "modernizr": "2.8.3",
+    "tooltipster": "3.3.0",
+    "trackpad-scroll-emulator": "1.0.8"
   },
   "resolutions": {
     "jquery": "^1.11.1"
