--- a/package.json
+++ b/package.json
@@ -18,30 +18,30 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "2.1.0",
-    "broccoli-sass": "0.6.6",
-    "ember-cli": "1.13.1",
-    "ember-cli-app-version": "0.3.5",
+    "broccoli-asset-rev": "2.2.0",
+    "broccoli-sass": "0.6.7",
+    "ember-cli": "1.13.12",
+    "ember-cli-app-version": "1.0.0",
     "ember-cli-autoprefixer": "0.4.1",
-    "ember-cli-dependency-checker": "1.0.1",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "0.2.0",
+    "ember-cli-moment-shim": "0.7.1",
+    "ember-cli-dependency-checker": "1.1.0",
+    "ember-cli-htmlbars": "1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "0.3.1",
     "ember-cli-inject-live-reload": "1.3.1",
     "ember-cli-paint": "1.13.4",
-    "ember-cli-qunit": "0.3.15",
+    "ember-cli-qunit": "1.0.4",
     "ember-cli-uglify": "1.2.0",
-    "ember-data": "1.13.5",
-    "ember-disable-proxy-controllers": "1.0.0",
-    "ember-export-application-global": "1.0.2",
-    "ember-try": "0.0.7"
+    "ember-component-inbound-actions": "0.0.4",
+    "ember-data": "2.1.0",
+    "ember-disable-proxy-controllers": "1.0.1",
+    "ember-export-application-global": "1.0.5",
+    "ember-moment": "4.1.0",
+    "ember-rl-dropdown": "0.5.0",
+    "ember-try": "0.0.8",
+    "liquid-fire": "0.21.3"
   },
   "dependencies": {
-    "ember-cli-babel": "5.0.0",
-    "ember-cli-moment-shim": "0.6.1",
-    "ember-component-inbound-actions": "0.0.3",
-    "ember-moment": "3.5.0",
-    "ember-rl-dropdown": "0.5.0",
-    "liquid-fire": "0.21.2"
+    "ember-cli-babel": "5.1.5"
   },
   "keywords": [
     "ember-addon"
