--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -53,6 +53,9 @@ linters:
   IdWithExtraneousSelector:
     enabled: true
 
+  ImportantRule:
+    enabled: false
+
   ImportPath:
     enabled: true
     leading_underscore: false
