--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "lodash": "3.10.0",
     "moment": "2.10.6",
     "moment-timezone": "0.4.0",
-    "paint": "0.9.3",
+    "paint": "0.9.5",
     "qunit": "1.20.0",
     "spinjs": "2.0.2",
     "modernizr": "2.8.3",
@@ -24,6 +24,6 @@
     "trackpad-scroll-emulator": "1.0.8"
   },
   "resolutions": {
-    "jquery": "^1.11.1"
+    "jquery": "1.11.3"
   }
 }
