--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
   "devDependencies": {
     "broccoli-asset-rev": "2.2.0",
     "broccoli-sass": "0.6.7",
-    "ember-cli": "1.13.12",
+    "ember-cli": "1.13.13",
     "ember-cli-app-version": "1.0.0",
     "ember-cli-autoprefixer": "0.4.1",
-    "ember-cli-moment-shim": "0.7.1",
+    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "1.1.0",
     "ember-cli-htmlbars": "1.0.1",
     "ember-cli-htmlbars-inline-precompile": "0.3.1",
+    "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "1.3.1",
-    "ember-cli-paint": "1.13.4",
+    "ember-cli-moment-shim": "0.7.1",
+    "ember-cli-paint": "1.13.5",
     "ember-cli-qunit": "1.0.4",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "1.2.0",
     "ember-cli-uglify": "1.2.0",
     "ember-component-inbound-actions": "0.0.4",
     "ember-data": "2.1.0",
