--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,9 @@
+engines:
+  eslint:
+    enabled: true
+  scss-lint:
+    enabled: true
+  watson:
+    enabled: true
 exclude_paths:
   - "tests/*"
