Make codeclimate happy (they have no life)

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,9 @@ engines:
     enabled: true
   scss-lint:
     enabled: true
+    checks:
+      TrailingSemicolon:
+        enabled: false
   watson:
     enabled: true
 ratings:
