--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "2.2.0",
-    "broccoli-sass": "0.6.7",
+    "ember-cli-sass": "^5.3.1",
     "ember-cli": "1.13.13",
     "ember-cli-app-version": "1.0.0",
     "ember-cli-autoprefixer": "0.4.1",
