--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember try:testall"
+    "test": "ember try:each"
   },
   "repository": "https://github.com/alphasights/ember-calendar",
   "engines": {
@@ -40,7 +40,7 @@
     "ember-export-application-global": "1.0.5",
     "ember-moment": "6.0.0",
     "ember-rl-dropdown": "0.5.0",
-    "ember-try": "0.0.8",
+    "ember-try": "0.2.2",
     "liquid-fire": "0.23.0",
     "moment": "2.11.2",
     "moment-timezone": "0.5.1"
