--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-export-application-global": "1.0.5",
     "ember-moment": "6.0.0",
     "ember-rl-dropdown": "0.5.0",
+    "ember-truth-helpers": "1.2.0",
     "ember-try": "0.2.2",
     "liquid-fire": "0.23.0",
     "moment": "2.11.2",
