--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# editor
+.vscode
+.vscodeignore
+jsconfig.json
+
+# typings
+typings/
+
 # compiled output
 /dist
 /tmp
