--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.1.0",
     "ember-resolver": "0.1.20",
-    "interact": "1.2.5",
+    "interact": "unstable",
     "jquery": "1.11.3",
     "jquery-simulate": "1.0.1",
     "loader.js": "3.4.0",
