--- a/package.json
+++ b/package.json
@@ -18,35 +18,37 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "2.2.0",
-    "ember-cli": "1.13.13",
-    "ember-cli-app-version": "1.0.0",
+    "broccoli-asset-rev": "2.4.6",
+    "ember-cli": "2.8.0",
+    "ember-cli-app-version": "2.0.0",
     "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "1.1.0",
-    "ember-cli-htmlbars": "1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
-    "ember-cli-inject-live-reload": "1.3.1",
-    "ember-cli-moment-shim": "1.0.0",
-    "ember-cli-qunit": "1.0.4",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-dependency-checker": "1.3.0",
+    "ember-cli-htmlbars": "1.1.0",
+    "ember-cli-htmlbars-inline-precompile": "0.3.5",
+    "ember-cli-inject-live-reload": "1.4.0",
+    "ember-cli-moment-shim": "1.1.0",
+    "ember-cli-qunit": "2.2.1",
+    "ember-cli-release": "0.2.9",
     "ember-cli-sass": "5.3.1",
-    "ember-cli-sri": "1.2.0",
+    "ember-cli-sri": "2.1.0",
+    "ember-cli-test-loader": "1.1.0",
     "ember-cli-uglify": "1.2.0",
     "ember-component-inbound-actions": "0.0.4",
-    "ember-data": "2.1.0",
+    "ember-data": "2.8.0",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
-    "ember-moment": "6.0.0",
-    "ember-rl-dropdown": "0.5.0",
-    "ember-try": "0.2.2",
-    "liquid-fire": "0.23.0",
-    "moment": "2.11.2",
-    "moment-timezone": "0.5.1"
+    "ember-inflector": "1.9.6",
+    "ember-load-initializers": "0.5.1",
+    "ember-moment": "6.1.0",
+    "ember-rl-dropdown": "0.7.1",
+    "liquid-fire": "0.26.0",
+    "loader.js": "4.0.11",
+    "moment": "2.15.0",
+    "moment-timezone": "0.5.5"
   },
   "dependencies": {
-    "ember-cli-babel": "5.1.5"
+    "ember-cli-babel": "5.1.6"
   },
   "keywords": [
     "ember-addon"
