--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-inflector": "1.9.6",
     "ember-load-initializers": "0.5.1",
     "ember-moment": "6.1.0",
+    "ember-resolver": "2.1.0",
     "ember-rl-dropdown": "0.7.1",
     "liquid-fire": "0.26.0",
     "loader.js": "4.0.11",
