Replace interactjs from bower to npm

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ember-cli-sass": "6.2.0",
     "ember-lodash": "^4.17.4",
     "ember-rl-dropdown": "^0.10.1",
-    "fontawesome": "^4.7.2"
+    "fontawesome": "^4.7.2",
+    "interactjs": "1.2.8"
   },
   "devDependencies": {
     "broccoli-asset-rev": "2.4.5",
