--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "loader.js": "4.2.3"
   },
   "engines": {
-    "node": ">= 7"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
     "demoURL": "https://alphasights.github.io/ember-calendar/demo",
