--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "ember-rl-dropdown": "^0.10.1",
     "fastboot-transform": "^0.1.2",
     "fontawesome": "^4.7.2",
-    "interactjs": "1.2.8"
+    "interactjs": "1.3.4"
   },
   "devDependencies": {
     "broccoli-asset-rev": "2.4.5",
+    "ember-auto-import": "^1.2.13",
     "ember-cli": "2.13.2",
     "ember-cli-dependency-checker": "1.3.0",
     "ember-cli-eslint": "3.0.0",
