--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ember-auto-import": "^1.2.13",
     "ember-cli": "2.13.2",
     "ember-cli-dependency-checker": "1.3.0",
-    "ember-cli-eslint": "3.0.0",
+    "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "1.1.1",
     "ember-cli-htmlbars-inline-precompile": "0.4.0",
     "ember-cli-inject-live-reload": "1.4.1",
@@ -47,6 +47,7 @@
     "ember-resolver": "4.0.0",
     "ember-source": "2.13.0",
     "ember-test-selectors": "^0.3.4",
+    "eslint-plugin-ember": "^5.2.0",
     "loader.js": "4.2.3"
   },
   "engines": {
