--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "keywords": [
     "ember-addon"
   ],
+  "repository": "https://github.com/alphasights/ember-calendar",
   "license": "MIT",
   "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "https://github.com/alphasights/ember-calendar",
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "6.0.0",
+    "ember-cli-babel": "^6.16.0",
     "ember-cli-sass": "6.2.0",
     "ember-lodash": "^4.17.4",
     "ember-rl-dropdown": "^0.10.1",
@@ -27,31 +30,37 @@
     "interactjs": "1.3.4"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "2.4.5",
+    "@ember/optional-features": "^0.6.3",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-auto-import": "^1.2.13",
-    "ember-cli": "2.13.2",
-    "ember-cli-dependency-checker": "1.3.0",
+    "ember-cli": "~3.4.3",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "0.4.0",
-    "ember-cli-inject-live-reload": "1.4.1",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "3.3.1",
-    "ember-cli-qunit": "4.0.0",
-    "ember-cli-shims": "1.1.0",
-    "ember-cli-sri": "2.1.0",
-    "ember-cli-uglify": "1.2.0",
-    "ember-disable-prototype-extensions": "1.1.0",
+    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "2.0.0",
-    "ember-load-initializers": "1.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "7.3.0",
-    "ember-resolver": "4.0.0",
-    "ember-source": "2.13.0",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.4.0",
+    "ember-source-channel-url": "^1.1.0",
     "ember-test-selectors": "^0.3.4",
+    "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^5.2.0",
-    "loader.js": "4.2.3"
+    "eslint-plugin-node": "^7.0.1",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.7.1"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "demoURL": "https://alphasights.github.io/ember-calendar/demo",
