move moment packages from devDeps to deps

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "ember-auto-import": "^1.2.13",
     "ember-cli-babel": "^6.16.0",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "6.2.0",
     "ember-lodash": "^4.17.4",
+    "ember-moment": "^7.8.0",
     "ember-rl-dropdown": "^0.10.1",
     "fastboot-transform": "^0.1.2",
     "fontawesome": "^4.7.2",
@@ -39,7 +41,6 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-moment-shim": "3.3.1",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
@@ -48,7 +49,6 @@
     "ember-export-application-global": "2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-moment": "7.3.0",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
     "ember-source-channel-url": "^1.1.0",
