--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "ember-moment": "^7.8.0",
     "ember-rl-dropdown": "^0.10.1",
     "fastboot-transform": "^0.1.2",
-    "fontawesome": "^4.7.2",
     "interactjs": "1.3.4"
   },
   "devDependencies": {
@@ -45,25 +44,25 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-composable-helpers": "1.1.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "2.0.0",
+    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
     "ember-source-channel-url": "^1.1.0",
     "ember-test-selectors": "^0.3.4",
-    "ember-try": "^1.0.0",
-    "eslint-plugin-ember": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
-    "loader.js": "^4.7.0",
-    "qunit-dom": "^0.7.1",
-    "ember-composable-helpers": "1.1.1",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.2.2",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
     "liquid-fire": "0.23.0",
+    "loader.js": "^4.7.0",
     "moment": "2.11.2",
-    "moment-timezone": "0.5.1"
+    "moment-timezone": "0.5.1",
+    "qunit-dom": "^0.7.1"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
