--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "ember-moment": "^7.8.0",
     "ember-rl-dropdown": "^0.10.1",
     "fastboot-transform": "^0.1.2",
-    "interactjs": "1.3.4"
+    "interactjs": "1.3.4",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
@@ -60,8 +62,6 @@
     "eslint-plugin-node": "^7.0.1",
     "liquid-fire": "0.23.0",
     "loader.js": "^4.7.0",
-    "moment": "2.11.2",
-    "moment-timezone": "0.5.1",
     "qunit-dom": "^0.7.1"
   },
   "engines": {
