--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "ember-auto-import": "^1.2.13",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "7.1.3",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "6.2.0",
     "ember-cli-shims": "^1.2.0",
@@ -47,8 +47,9 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
-    "ember-composable-helpers": "1.1.1",
+    "ember-composable-helpers": "2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-drag-drop": "^0.6.2",
     "ember-export-application-global": "2.0.0",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.1.0",
@@ -57,11 +58,11 @@
     "ember-source": "~3.4.0",
     "ember-source-channel-url": "^1.1.0",
     "ember-test-selectors": "^0.3.4",
-    "ember-truth-helpers": "1.2.0",
-    "ember-try": "0.2.2",
+    "ember-truth-helpers": "2.1.0",
+    "ember-try": "1.1.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-node": "^7.0.1",
-    "liquid-fire": "0.23.0",
+    "liquid-fire": "0.29.5",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.7.1"
   },
