fix drag import

--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-drag-drop": "^0.6.2",
+    "ember-drag-drop": "git+https://github.com/mcfiredrill/ember-drag-drop.git#move-test-helpers-to-addon",
     "ember-export-application-global": "2.0.0",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-native-dom-helpers": "^0.6.2",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
     "ember-source-channel-url": "^1.1.0",
