--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-node": "^7.0.1",
     "liquid-fire": "0.29.5",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.7.1"
+    "qunit-dom": "0.8.2"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
