--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "ember-cli-shims": "^1.2.0",
     "ember-lodash": "^4.17.4",
     "ember-moment": "^7.8.0",
-    "ember-rl-dropdown": "^0.10.1",
     "fastboot-transform": "^0.1.2",
     "interactjs": "1.3.4",
     "moment": "^2.22.2",
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
+    "ember-basic-dropdown": "^1.1.2",
     "ember-cli": "~3.4.3",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
