--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "6.2.0",
     "ember-cli-shims": "^1.2.0",
+    "ember-drag-drop": "^0.6.2",
     "ember-lodash": "^4.17.4",
     "ember-moment": "^7.8.0",
     "fastboot-transform": "^0.1.2",
@@ -49,7 +50,6 @@
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-drag-drop": "git+https://github.com/mcfiredrill/ember-drag-drop.git#move-test-helpers-to-addon",
     "ember-export-application-global": "2.0.0",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.1.0",
