remove moment and moment-timezone as direct dependencies

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "ember-lodash": "^4.17.4",
     "ember-moment": "^7.8.0",
     "fastboot-transform": "^0.1.2",
-    "interactjs": "1.3.4",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21"
+    "interactjs": "1.3.4"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
