--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
+    "@fortawesome/ember-fontawesome": "^0.2.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-basic-dropdown": "^1.1.2",
     "ember-cli": "~3.4.3",
@@ -49,9 +51,7 @@
     "ember-composable-helpers": "2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "2.0.0",
-    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.1.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-native-dom-helpers": "^0.6.2",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
